noinst_LIBRARIES = libalgorithm.a

libalgorithm_a_CPPFLAGS = \
	-I$(top_srcdir)/SGA/Bigraph \
	-I$(top_srcdir)/SGA/Util \
	-I$(top_srcdir)/SGA/StringGraph \
	-I$(top_srcdir)/SGA/SQG \
	-I$(top_srcdir)/SGA/SuffixTools
##	-I$(top_srcdir)/SGA/Thirdparty \
##	-I$(top_srcdir)/SGA/GraphDiff \
##    -I$(top_srcdir)/SGA/Concurrency

libalgorithm_a_SOURCES = \
        OverlapAlgorithm.h OverlapAlgorithm.cpp \
		SearchSeed.h SearchSeed.cpp \
		OverlapBlock.h OverlapBlock.cpp \
		SearchHistory.h SearchHistory.cpp \
##        ErrorCorrectProcess.h ErrorCorrectProcess.cpp \
##        QCProcess.h QCProcess.cpp \
        OverlapTools.h OverlapTools.cpp 
##		DPAlignment.h DPAlignment.cpp \
##        ConnectProcess.h ConnectProcess.cpp \
##        StringGraphGenerator.h StringGraphGenerator.cpp \
##        FMMergeProcess.h FMMergeProcess.cpp \
##        StatsProcess.h StatsProcess.cpp \
##        ClusterProcess.h ClusterProcess.cpp \
##        ReadCluster.h ReadCluster.cpp \
##        LRAlignment.h LRAlignment.cpp \
##        StringThreader.h StringThreader.cpp \
##        ExtensionDP.h ExtensionDP.cpp \
##        HaplotypeBuilder.h HaplotypeBuilder.cpp \
##        GapFillProcess.h GapFillProcess.cpp \
##        VariationBuilderCommon.h VariationBuilderCommon.cpp \
##        KmerOverlaps.h KmerOverlaps.cpp
