noinst_LIBRARIES = libsga.a

libsga_a_CPPFLAGS = \
	-I$(top_srcdir)/src/SGA/Util \
	-I$(top_srcdir)/src/SGA/Bigraph \
	-I$(top_srcdir)/src/SGA/SuffixTools \
	-I$(top_srcdir)/src/SGA/StringGraph \
	-I$(top_srcdir)/SeqLib \
	-I$(top_srcdir)/src/SGA/Algorithm \
	-I$(top_srcdir)/src/SGA/SQG 

libsga_a_SOURCES = \
##index.cpp index.h \
              ##overlap.cpp overlap.h \
##              assemble.cpp assemble.h \
##              correct.cpp correct.h \
##              oview.cpp oview.h \
##              preprocess.cpp preprocess.h \
##              rmdup.cpp rmdup.h \
##              merge.cpp merge.h \
##              subgraph.cpp subgraph.h \
##              scaffold.cpp scaffold.h \
##              scaffold2fasta.cpp scaffold2fasta.h \
##              connect.cpp connect.h \
##              walk.cpp walk.h \
##              filter.cpp filter.h \
##              kmer-count.cpp kmer-count.h \
 ##             stats.cpp stats.h \
##              fm-merge.cpp fm-merge.h \
##              gmap.h gmap.cpp \
 ##             filterBAM.h filterBAM.cpp \
   ##           cluster.h cluster.cpp \
     ##         gen-ssa.h gen-ssa.cpp \
       ##       bwt2fa.h bwt2fa.cpp \
         ##     graph-diff.h graph-diff.cpp \
           ##   graph-concordance.h graph-concordance.cpp \
  ##            gapfill.h gapfill.cpp \
    ##          preqc.h preqc.cpp \
      ##        variant-detectability.h variant-detectability.cpp \
        ##      rewrite-evidence-bam.h rewrite-evidence-bam.cpp \
          ##    somatic-variant-filters-bam.h somatic-variant-filters.cpp \
            ##  haplotype-filter.h haplotype-filter.cpp \
              OverlapCommon.h OverlapCommon.cpp \
              SGACommon.h 

# LocalWords:  srcdir
