noinst_LIBRARIES = libutil.a

libutil_a_CPPFLAGS = -I$(top_srcdir)/src/SGA/Bigraph \
	             -I$(top_srcdir)/SeqLib

libutil_a_SOURCES = Util.cpp stdaln.c Alphabet.cpp Contig.cpp \
		ReadTable.cpp ReadInfoTable.cpp SeqReader.cpp DNAString.cpp Match.cpp \
		Pileup.cpp Interval.cpp SeqCoord.cpp QualityVector.cpp Quality.cpp \
		PrimerScreen.cpp CorrectionThresholds.cpp ClusterReader.cpp QualityTable.cpp \
		gzstream.C BitChar.cpp MultiOverlap.cpp


